[package]
name = "yaf"
version = "1.1.0"
authors = ["kktsdev"]
edition = "2021"
description = "Yet Another Fetch"
repository = "https://github.com/kktsdev/yaf"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[dependencies]
argp = "0.3.0"
dirs = "5.0.1"
phf = { version = "0.11.2", features = [ "macros" ] }
thiserror = "1.0.63"
